[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/logos/logo_ICO.png" type="Texture" id=1]
[ext_resource path="res://assets/cover.png" type="Texture" id=2]
[ext_resource path="res://views/code/main-menu.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/ui_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts_theme.theme" type="Theme" id=5]
[ext_resource path="res://assets/fonts/ui_font_outline.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Cover" type="Sprite" parent="."]
position = Vector2( 960, 542.5 )
scale = Vector2( 1, 0.984404 )
texture = ExtResource( 2 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.884
anchor_right = 0.5
anchor_bottom = 0.903
margin_left = 414.0
margin_top = -584.0
margin_right = 283.0
margin_bottom = -262.0
theme = ExtResource( 5 )
script = ExtResource( 3 )

[node name="Surface Operations" type="Button" parent="Menu"]
margin_right = 387.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Surface Operations"

[node name="Spaceflight" type="Button" parent="Menu"]
margin_top = 48.0
margin_right = 387.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "SpaceFlight"

[node name="Panel" type="Panel" parent="Menu"]
margin_top = 96.0
margin_right = 387.0
margin_bottom = 96.0

[node name="ModelBrowser" type="Button" parent="Menu"]
margin_top = 100.0
margin_right = 387.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "3D Models Browser"

[node name="Panel2" type="Panel" parent="Menu"]
margin_top = 148.0
margin_right = 387.0
margin_bottom = 148.0

[node name="Trajectory Planning" type="Button" parent="Menu"]
margin_top = 152.0
margin_right = 387.0
margin_bottom = 196.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Trajectory Planning (TBD)"

[node name="Panel3" type="Panel" parent="Menu"]
margin_top = 200.0
margin_right = 387.0
margin_bottom = 200.0

[node name="Help" type="Button" parent="Menu"]
margin_top = 204.0
margin_right = 387.0
margin_bottom = 248.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Help (TBD)"

[node name="Settings" type="Button" parent="Menu"]
margin_top = 252.0
margin_right = 387.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Settings (TBD)"

[node name="Exit" type="Button" parent="Menu"]
margin_top = 300.0
margin_right = 387.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( -78, 5 )
size_flags_horizontal = 5
size_flags_vertical = 4
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Exit"

[node name="Title" type="RichTextLabel" parent="."]
visible = false
margin_left = 602.0
margin_top = 142.0
margin_right = 804.0
margin_bottom = 190.0
custom_fonts/normal_font = SubResource( 1 )
text = "LUNCO"

[node name="LogoIco" type="Sprite" parent="."]
position = Vector2( 96, 96 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -239.0
margin_top = -51.0
margin_right = -15.0
margin_bottom = -11.0
custom_fonts/font = ExtResource( 6 )
text = "Version: 0.0.2"

[node name="Label" type="Label" parent="Label"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -525.0
margin_top = -786.0
margin_right = -154.0
margin_bottom = -746.0
custom_fonts/font = ExtResource( 6 )
text = "Press Esc for Menu"

[connection signal="pressed" from="Menu/Surface Operations" to="Menu" method="_on_Surface_Operations_pressed"]
[connection signal="pressed" from="Menu/Spaceflight" to="Menu" method="_on_Spaceflight_pressed"]
[connection signal="pressed" from="Menu/ModelBrowser" to="Menu" method="_on_ModelBrowser_pressed"]
[connection signal="pressed" from="Menu/Trajectory Planning" to="Menu" method="_on_Trajectory_Planning_pressed"]
[connection signal="pressed" from="Menu/Help" to="Menu" method="_on_Help_pressed"]
[connection signal="pressed" from="Menu/Settings" to="Menu" method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/Exit" to="Menu" method="_on_Exit_pressed"]
